--- a/.github/workflows/ci_dockerhub.yml
+++ b/.github/workflows/ci_dockerhub.yml
@@ -24,7 +24,8 @@ jobs:
         env:
           REPOSITORY: nginx
           IMAGE_TAG: latest
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG
+          docker build -t $DOCKERHUB_USERNAME/$REPOSITORY:$IMAGE_TAG .
+          docker push $DOCKERHUB_USERNAME/$REPOSITORY:$IMAGE_TAG
 
